# sir-lancebot

./: .dockerignore  .flake8  .gitignore  .gitmessage.txt  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Calculator  Calculator.py  Dockerfile  Pipfile  README.md  UML-diagrams.md  Welcome.py  azure-pipelines.yml  conversationstarters.py  deployment.yaml  docker-compose.yml  global_birth.py  how-to-test.md  pyproject.toml  queue.py  report.md  requirements-dev.txt  requirements.txt  tatus  tox.ini  traditions.json  ves.py  weather_forecast.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-template.md  bug-report.md  config.yml  feature-enhancement.md  feature-request.md  feature.md  feature_request.md  new-feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-deploy.yaml  build.yaml  codeql-analysis.yml  lint-build-deploy.yaml  lint-build.yaml  lint.yaml  main.yaml  review-check.yaml  sentry_release.yaml  status_embed.yaml
bot/: __init__.py  __main__.py  bot.py  branding.py  constants.py  decorators.py  group.py  help.py  log.py  monkey_patches.py  pagination.py  seasons.py
bot/cogs/: candy_collection.json  candy_collection.py  error_handler.py  gif.py  hacktoberstats.py  halloween_facts.py  halloweenify.py  monstersurvey.py  movie.py  prsleft.py  rand_movie.py  season.py  spookyavatar.py  spookyreact.py  spookysound.py  template.py  timeleft.py
bot/cogs/evergreen/: adventofcode.py  uptime.py
bot/cogs/hacktober/: candy_collection.py  hacktoberstats.py  halloween_facts.py  halloweenify.py  monstersurvey.py  scarymovie.py  spookyavatar.py  spookygif.py  spookyreact.py
bot/cogs/resources/: candy_collection.json
bot/command_error_handlers/: __init__.py  _utils.py  api_error.py  bad_argument.py  check_failure.py  command_not_found.py  command_on_cooldown.py  default.py  disabled_command.py  moved_command.py  user_input_error.py  user_not_playing.py
bot/exts/: __init__.py  season.py
bot/exts/avatar_modification/: _effects.py  avatar_modify.py  randomizeSeed.py
bot/exts/christmas/: __init__.py  adventofcode.py  hanukkah_embed.py
bot/exts/core/: error_handler.py  extensions.py  help.py  leaderboard.py  ping.py  source.py
bot/exts/easter/: april_fools_vids.py  avatar_easterifier.py  bunny_name_generator.py  conversationstarters.py  earth_photos.py  easter_riddle.py  egg_decorating.py  egg_facts.py  egghead_quiz.py  save_the_planet.py  traditions.py
bot/exts/evergreen/: 8bitify.py  __init__.py  battleship.py  bookmark.py  branding.py  catify.py  challenges.py  cheatsheet.py  coinflip.py  color.py  connect_four.py  conversationstarters.py  cowsay.py  duck_game.py  emoji.py  emoji_count.py  emojis.py  error_handler.py  fun.py  game.py  githubinfo.py  gurkan.py  hangman.py  help.py  issues.py  latex.py  magic_8ball.py  minesweeper.py  movie.py  music.py  pfp_modify.py  ping.py  pythonfacts.py  realpython.py  recommend_game.py  reddit.py  rps.py  showprojects.py  source.py  space.py  (+15 more)
bot/exts/fun/: adventure.py  anagram.py  battleship.py  catify.py  coinflip.py  color.py  connect_four.py  cowsay.py  duck_game.py  fun.py  game.py  guess_number.py  hangman.py  kenken.py  latex.py  leaderboard.py  madlibs.py  magic_8ball.py  mathdoku.py  mathdoku_integration.py  mathdoku_parser.py  minesweeper.py  movie.py  quack.py  realpython.py  recommend_game.py  rps.py  space.py  speedrun.py  status_codes.py  tic_tac_toe.py  trivia_quiz.py  typst.py  uwu.py  wonder_twins.py  wordle_bot.py  wtf_python.py  xkcd.py  yodaify.py
bot/exts/halloween/: 8ball.py  candy_collection.py  hacktober-issue-finder.py  hacktoberstats.py  halloween_facts.py  halloweenify.py  monsterbio.py  monstersurvey.py  scarymovie.py  spookyavatar.py  spookygif.py  spookynamerate.py  spookyrating.py  spookyreact.py  spookysound.py  timeleft.py
bot/exts/holidays/: holidayreact.py
bot/exts/internal_eval/: __init__.py  _helpers.py  _internal_eval.py  internal_eval.py
bot/exts/pride/: __init__.py  drag_queen_name.py  pride_anthem.py  pride_avatar.py  pride_facts.py  pride_leader.py  prideleader.py
bot/exts/utilities/: bookmark.py  challenges.py  cheatsheet.py  color.py  colour.py  conversationstarters.py  emoji.py  epoch.py  get_commits.py  github_stats.py  githubinfo.py  githubstats.py  issues.py  logging.py  pythonfacts.py  realpython.py  reddit.py  rfc.py  stackoverflow.py  timed.py  twemoji.py  validate.py  wikipedia.py  wolfram.py  wtf_python.py
bot/exts/utils/: extensions.py
bot/exts/valentines/: __init__.py  be_my_valentine.py  lovecalculator.py  markov_poem_generator.py  movie_generator.py  myvalenstate.py  pickuplines.py  savethedate.py  valentine_zodiac.py  whoisvalentine.py
bot/exts/wildcard/: __init__.py
bot/resources/: halloween_facts.json  halloweenify.json  monstersurvey.json  spookifications.py
bot/resources/advent_of_code/: about.json
bot/resources/easter/: april_fools_vids.json  earth_photos.json  easter_egg_facts.json  easter_riddle.json  egghead_questions.json  save_the_planet.json
bot/resources/evergreen/: branding.json  caesar_info.json  github.json  global_birth.json  html_colours.json  io.py  magic8ball.json  member_timezones.sqlite  py_topics.json  py_topics.yaml  python_facts.txt  ryanzec_colours.json  speedrun_links.json  speedrun_resources.json  starter.json  starter.yaml  top_1000_used_words.txt  trivia_quiz.json
bot/resources/fun/: anagram.json  hangman_words.txt  (+11 more)
bot/seasons/: __init__.py  branding.py  christmas.py  evergreen.py  halloween.py  season.py
bot/utils/: __init__.py  archives.py  checks.py  codeblocks.py  cog_load.py  commands.py  converters.py  decorators.py  exceptions.py  extensions.py  helpers.py  images.py  leaderboard.py  members.py  messages.py  movies.py  pagination.py  persist.py  quote.py  randomization.py  time.py  typst.py
docker/: Dockerfile  build.sh  docker-compose.yml
scripts/: deploy-azure.sh
tests/: test_exampletest.py  test_grid_class.py  test_pytest.py
(+260 files in other folders)
