[tool.poetry]
name = "sir-lancebot"
version = "0.1.0"
description = "A Discord bot designed as a fun and beginner-friendly learning environment for writing bot features and learning open-source."
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"

# See https://bot-core.pythondiscord.com/ for docs.
pydis_core = { version = "9.6.0", extras = ["async-rediscache"] }

aiodns = "3.0.0"
rapidfuzz = "3.1.0"
arrow = "1.2.3"
beautifulsoup4 = "4.12.2"
pillow = "9.5.0"
sentry-sdk = "1.24.0"
PyYAML = "6.0"
emojis = "0.7.0"
coloredlogs = "15.0.1"
colorama = { version = "0.4.6", markers = "sys_platform == 'win32'" }
lxml = "4.9.2"
emoji = "2.4.0"
pyjokes = "0.6.0"
pydantic = { version = "1.10.8", extras = ["dotenv"]}


[tool.poetry.dev-dependencies]
isort = "5.12.0"
pip-licenses = "4.3.2"
pre-commit = "3.3.2"
python-dotenv = "1.0.0"
ruff = "0.0.270"
taskipy = "1.11.0"

[tool.taskipy.tasks]
start = "python -m bot"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
isort = "isort ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 6
order_by_type = false
case_sensitive = true
combine_as_imports = true
line_length = 120
atomic = true
known_first_party = ["bot"]

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "RET504",
    "RUF005",
    "S311",
    "SIM102", "SIM108",
]
line-length = 120
select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
